# Skadi

./: .env.example  .gitignore  Dockerfile  FRONTEND_INTEGRATION.md  GITIGNORE_PROTECTION.md  HEATMAP_STATUS.md  IMPLEMENTATION.md  INTEGRATION_COMPLETE.md  KAGGLE_SETUP.md  LICENSE  QUICKSTART.md  QUICKSTART_MODELS.md  QUICK_DEPLOY.md  README.md  STARTUP_CHECKLIST.md  VERCEL_DEPLOYMENT_GUIDE.md  __init__.py  demo_generator.py  docker-compose.yml  download_kaggle_datasets.py  generate_training_data.py  generate_visualizations.py  nixpacks.toml  pyproject.toml  quickstart.py  railway.json  requirements.txt  run_dashboard.py  start.sh  start_api.py  train_ims_with_kaggle_data.py  train_ims_with_real_data.py
api/: app.py  routes_actions.py  routes_analytics.py  routes_demo.py  routes_heatmap.py  routes_ims.py  routes_ml_analytics.py  routes_ml_heatmap.py  routes_mode.py  routes_optimizer.py  routes_reports.py  routes_state.py  routes_telemetry.py  routes_timeline.py  ws.py
core/: __init__.py  config.py  errors.py  logging.py
docs/: TRAINING_COMPLETE.md  TRAINING_DATA.md
ims/: __init__.py  score.py  train.py
ingestors/: __init__.py  foss.py  kaggle_datasets.py  mock_generators.py
mms/: __init__.py  filter.py
optimizer/: __init__.py  fast_loop.py  policies.py  slow_loop.py
report/: __init__.py
storage/: __init__.py  db.py  models.py  rollups.py
tests/: __init__.py  test_api.py  test_ims.py  test_optimizer.py
training/: dataset_mixer.py  synthetic_data_generator.py  train_ims.py
viz/: __init__.py  comprehensive_dashboard.py  dashboard.py
(+17 files in other folders)
