[project]
name = "skadi"
version = "1.0.0"
description = "Skadi - ML-powered datacenter optimization platform"
requires-python = ">=3.11,<3.12"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["api", "core", "ims", "mms", "optimizer", "storage", "ingestors", "training", "viz", "report"]
